# BioCompiler

./: README.md  README.txt  notes.txt
grn-emitter/: .cproject  .neop2b  .project  AUTHORS  BioCompilerPlugin.cpp  BioCompilerPlugin.h  BioCompilerPlugin.lo  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.DEVELOPER  aclocal.m4  biocompiler.cpp  biocompiler.h  biocompiler.lo  config.h  config.h.in  config.status  configure  configure.ac  grn.cpp  grn.h  grn.lo  grn_utilities.cpp  grn_utilities.h  grn_utilities.lo  libtool
grn-emitter/.deps/: BioCompilerPlugin.Plo  biobricks.Plo  biocompiler.Plo  cheapo-xml.Plo  grn.Plo  grn_utilities.Plo  to-dot.Plo  to-matlab.Plo  to-sbol.Plo  to-xml.Plo
grn-emitter/.libs/: libbiocompiler.dylib  libbiocompiler.la  libbiocompiler.lai
grn-emitter/autom4te.cache/: output.0  requests  traces.0  traces.1
grn-emitter/config/: dirs.m4
grn-emitter/examples/: 2bit-adder.proto  dox-detect.xml  example_grn.xml  extra-ops.proto  hello-world.proto  miRNA-motifs.proto  sr-latch.proto
grn-emitter/lib/: Makefile  Makefile.am  Makefile.in  README.txt  ecoli-platform.proto  grn-motifs-export.proto  grn-motifs.proto  mammalian-platform.proto
grn-emitter/logic-sampler/: .neop2b  bb_out.xml  circuit-complexity.eps  graph.m  logic.proto
grn-emitter/optimizers/: ConstantEliminator.cpp  ConstantEliminator.lo  CopyPropagator.cpp  CopyPropagator.lo  DeadCodeEliminator.cpp  DeadCodeEliminator.lo  DoubleNegativeEliminator.cpp  DoubleNegativeEliminator.lo  DuplicateReactionConsolidator.cpp  DuplicateReactionConsolidator.lo  InferChemicalType.cpp  InferChemicalType.lo  Makefile  Makefile.am  Makefile.in  MergeDuplicateInputs.cpp  MergeDuplicateInputs.lo  MultiProductEliminator.cpp  MultiProductEliminator.lo  NorCompressor.cpp  NorCompressor.lo  OutputConsolidator.cpp  OutputConsolidator.lo  grn_optimizers.cpp  grn_optimizers.h  grn_optimizers.lo  liboptimize.la
grn-emitter/optimizers/.deps/: *.Tpo  ConstantEliminator.Plo  CopyPropagator.Plo  DeadCodeEliminator.Plo  DoubleNegativeEliminator.Plo  DuplicateReactionConsolidator.Plo  InferChemicalType.Plo  MergeDuplicateInputs.Plo  MultiProductEliminator.Plo  NorCompressor.Plo  OutputConsolidator.Plo  grn_optimizers.Plo
grn-emitter/outputs/: Makefile  Makefile.am  Makefile.in  cheapo-xml.cpp  cheapo-xml.h  cheapo-xml.lo  liboutputs.la  to-dot.cpp  to-dot.lo  to-matlab.cpp  to-matlab.lo  to-sbol.cpp  to-sbol.lo
grn-emitter/outputs/.deps/: cheapo-xml.Plo  to-dot.Plo  to-matlab.Plo  to-sbol.Plo  to-xml.Plo
grn-emitter/tests/: #miRNA.test.RESULTS#  bugs.test  error.test  grnemitter.test  hybrid.test  matlab.test  miRNA.test  optimization.test  protoTestOutputFormatter.py  sbol.test  warnings.test
grn-emitter/tests/sbol_examples/: quadnot.sbol.xml  simple_sr.sbol.xml  xor.sbol.xml
proto-ext/.svn/: wc.db
proto-ext/odedynamics/: AUTHORS  Makefile.am  autogen.sh
proto-ext/odedynamics/examples/: test.xml
proto-ext/odedynamics/src/: odebody.cpp  odebodyfactory.cpp  odedynamics.h
proto-ext/proto/: AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.in  README  README.ide  aclocal.m4  config.status  configure  configure.ac  libtool  p2b  p2b.in  proto  proto.in
proto-ext/proto/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
proto-ext/proto/config/: ax_with_prog.m4  cppunit.m4  neocompiler.m4
proto-ext/proto/demos/: README.txt  bigfn.proto  channel.proto  connect.proto  flock.proto  nav-grad.proto  temp-color.proto  temperature.proto  voronoi.proto  whiteback.pal
proto-ext/proto/doc/: Doxyfile  Makefile  Makefile.in  mainPage.txt
proto-ext/proto/doc/html/: Makefile  Makefile.in  index.html
proto-ext/proto/lib/: Makefile  Makefile.in  bootstrap.proto  broadcast.proto  core.ops  dilate.proto  distance.proto  elect.proto  flip.proto  gradcast.proto  hop-broadcast.proto  hop-distance-to.proto  hsv2rgb.proto  once-every.proto  pretty-id.proto  random-subset.proto  timer.proto
proto-ext/proto/lib/core/: 2nd.proto  Makefile  Makefile.in  all-time.proto  asinh.proto  assoc.proto  denormalize.proto  denormalizeN.proto  e.proto  exp.proto  is-pos.proto  is-self.proto  is-zero.proto  log10.proto  min-time.proto  muxand.proto  normalize.proto  pi.proto  polar-to-rect.proto  position-first.proto  rect-to-polar.proto  rotate.proto  toDegrees.proto  toRadians.proto  vlen.proto
proto-ext/proto/lib/neo/: Makefile  Makefile.in  disperse.proto  gradient.proto
proto-ext/proto/lib/paleo/: Makefile  Makefile.in  disperse.proto  grad-value.proto
proto-ext/proto/man/src/: svn-multi.sty
proto-ext/proto/notes/: delay-lag.txt  plugin.txt
proto-ext/proto/src/: Makefile  Makefile.in  buildregistry  config.h  config.h.in  p2b  proto  sim-app.cpp  update_vm.sh
proto-ext/proto/src/.deps/: compiler-app.Po  createRegistry.Po  sim-app.Po
proto-ext/proto/src/.libs/: buildregistry  proto
proto-ext/proto/src/compiler/: Makefile  Makefile.am  Makefile.in  analyzer.cpp  analyzer.lo  compiler-utils.cpp  compiler-utils.lo  compiler.cpp  compiler.lo  emitter.cpp  emitter.lo  interpreter.cpp  interpreter.lo  ir.cpp  ir.lo  lexer.lo  lisp.h  lisp.lo  nicenames.h  nicenames.lo  paleocompiler.cpp  paleocompiler.h  paleocompiler.lo  proto_syntax.flex  prototypes.lo  reader.h  reader.lo  type-inference.cpp  type-inference.h  type-inference.lo
proto-ext/proto/src/core_plugins/: DistributionsPlugin.cpp  DistributionsPlugin.h  DistributionsPlugin.lo  Makefile  Makefile.in  Mica2MotePlugin.cpp  Mica2MotePlugin.lo  PerfectLocalizer.proto  RadioModelsPlugin.cpp  RadioModelsPlugin.lo  SimpleLifeCyclePlugin.lo  graph_link_radio.h  graph_link_radio.lo  libdistributions.la  libmica2mote.la  libradiomodels.la  mote-io.proto  multiradio.lo  stop-when.h  stop-when.lo  wormhole-radio.lo
proto-ext/proto/src/shared/: Makefile  Makefile.in  Trackball.cpp  Trackball.lo  drawing_primitives.cpp  drawing_primitives.h  drawing_primitives.lo  libshared.la  palette.cpp  palette.h  palette.lo  plugin_manager.cpp  plugin_manager.h  plugin_manager.lo  proto_opcodes.h  utils.cpp  visualizer.h  visualizer.lo
(+168 files in other folders)
